--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.development.config.js",
     "build:prod": "webpack --config webpack.production.config.js",
-    "build:tsx": "tsc"
+    "build:tsx": "tsc --declaration"
   },
   "author": "Alican Köker",
   "license": "ISC",
